[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2", features = ["full"]}
napi-derive = { version = "2", features = ["full"]}
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"
rqjs-cli = { version =  "0.1" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
